<!--Binay Garlapati. N01368870-->
<!--Nissan Rayappu. N01435235-->
<resources>
    <string name="app_name">TheDocky</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu Screen-->
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_username">Username</string>

    <!--Login Screen-->
    <string name="log_username">username</string>
    <string name="log_password">Password</string>
    <string name="log_Button">LogIn</string>
    <string name="reg_button">Register</string>
    <string name="Card_No">Enter Credit/Debit Card </string>
    <string name="submit">submit</string>
    <string name="enter">enter</string>
    <string name="forgot_pass_title">Let\'s get your account back!</string>
    <string name="forgot_pass_login">Forgot password</string>
    <string name="log_description">This is smart bike lock system</string>
    <string name="log_icons">LogIn with</string>
    <string name="enter_pass">Enter password</string>
    <string name="enter_email">Enter email address</string>

    <!--Forgot Password Screen-->
    <string name="send_email">Send Email</string>

    <!--SignUp screen-->
    <string name="signup_descr">Let\'s get \nstarted</string>
    <string name="signup_btn">Sign Up!</string>
    <string name="enter_name">Enter your name</string>
    <string name="reenter_pass">Reenter password</string>
    <string name="have_account">Don\'t have an account? SIGN UP</string>

    <!--Payment -->
    <string name="pay_now">Pay Now</string>
    <string name="bt_supported_card_types_description">Supported card types</string>

    <!--Review -->
    <string name="Review">Review</string>

    <!--Maps-->
    <!--FAQ-->

    <string name="question1">What is TheDocky?</string>
    <string name="q1_ans"> The Docky is a smart bike rack system that allows the users to park their bike at home, school, shopping malls, and any other public place that allows for bike access. This bike docking system comes with an app that controls the locking system and will let you know how long the user has parked their bike for. If the bike rack is located at a high traffic area, the property owners can add a payment system to the bike rack. Otherwise, the rack is free and is a first come, first serve system. When payments are required, they work similarly to a parking garage system where you pay for the time spent in a parking spot, the user will be billed hourly through the app after taking the bike off the rack. </string>

    <string name="question2">What is Data ih Home fragment?</string>
    <string name="q2_ans"> Data represents information from sensors and show it in your Home screen.  The main idea is that user can always take a look at their hardware information. </string>

    <string name="question3">What is hardware used in this project?</string>
    <string name="q3_ans"> We use 3 main components of our hardware: Weight Sensor - send and information about lock status. LCD Display - Display username data. Solenoid - stands for lock process of your bike</string>

    <string name="question4">What is the "Dock" button?</string>
    <string name="q4_ans">The "Dock" button move user to an dock screen which is responsible for solenoid activation. Also user can see all information about how long his bike in lock state and he can see rate for every second or minute of docking.</string>

    <string name="question5">Can i change my username?</string>
    <string name="q5_ans">Yes! Every user allowed to change his account credentials any time he wants. You can change you username, email and password in "Settings screen" by clicking "Edit" button. </string>

    <string name="question6">When I login for first time I have 100$ on balance. What is it?</string>
    <string name="q6_ans">Every user with registration gets and 100$ as bonus money for using our hardware. Also every user can put more money on his account by navigating to payment screen.</string>

    <string name="question7">What is "Map" activity?</string>
    <string name="q7_ans">Map activity is usewd to determine exact position of your hardware. So in case if your friend wants to use it, he can choose it from Map.</string>

    <string name="question8">Can I delete my account?</string>
    <string name="q8_ans">Yes! Evry user is allowed to delete his account. You can just navigate to Setting fragment and click "Delete Account" button.</string>

    <!-- Settings-->
    <string name="edit_profile_welcome">Welcome to Edit Profile!</string>
    <string name="new_username">Enter new username</string>
    <string name="new_email_address">Enter new email</string>
    <string name="new_password">Enter new password</string>
    <string name="update_btn">UPDATE</string>
    <!-- Header -->
    <!--Home-->
    <string name="home_username">Username:</string>
    <string name="more_info">More Info</string>
    <string name="home_balance">Balance:</string>
    <string name="status_text">Status:</string>
    <string name="data_field">Data:</string>
    <string name="weight_sen">Weight Sensor:</string>
    <string name="lcd_screen">LCD Screen:</string>
    <string name="solenoid_sen">Solenoid Sensor:</string>
    <string name="switch_locker_state">Lock|Unlock</string>
    <string name="loc_bike">Location:</string>
    <string name="timer_descr">How much we charge?</string>
    <string name="home_descr">Here you can see location\n of lock systems from the maps and after you choose it click lock/unlock to put or take you bike from system</string>

    <string name="head_name">TheDocky</string>

    <!--Customer Review -->
    <string name="customerPhone">Enter Your Phone Number</string>
    <string name="customerStars1">Very Dissatisfied</string>
    <string name="customerStars2">Very Dissatisfied</string>


    <string name="customerTextbox">Please Leave Your Feedback Here!</string>


    <!-- More info -->
    <string name="weight_descr">A weight sensor is a device that measures the weight or force applied to it. The purpose of a weight sensor is to provide accurate and precise measurements of weight or force, which is also used in our Android App!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!--Menu 2-->
    <string name="help_menu">Help</string>

    <!--Notification Preferences -->
    <string name="notif_title">Notification</string>
    <string name="set_volume">Volume</string>
    <string name="dis_notif">Disable Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>

    <string name="editTextDate">Expiry on Card</string>
    <string name="textview">Postal Code</string>
    <string name="autocompletetextview">Enter Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customerReviewFeedbackBox">Enter User Feedback.</string>
    <string name="customer_feedback">Customer Feedback!</string>
    <string name="fiveStarRatingBar">Leave Us A Star Rating</string>
    <string name="customerReviewFeedbackButton">Feedback Button</string>
    <string name="form_username" />


</resources>