<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_message">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_sync">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notif_title"
        app:icon="@drawable/ic_notification">

        <SeekBarPreference
            app:key="volume_notification"
            app:title="@string/set_volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/dis_notif"
            app:summaryOn="You will no longer receive notifications"
            app:summaryOff="You will receive all notifications"/>

    </PreferenceCategory>
</PreferenceScreen>