
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg_settings_test2"
    tools:context=".FaqActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_ans"
            android:textColor="@color/black"
            android:background="@drawable/rounded_bg"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:textColor="@color/black"
            android:text="@string/q2_ans"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q3_ans"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q4_ans"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q5_ans"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q6_ans"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q7_ans"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:fontFamily="@font/molot"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/answer8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:text="@string/q8_ans"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>


    </LinearLayout>
</ScrollView>