<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_test1"
    tools:context=".ReviewFragment">

    <TextView
        android:id="@+id/customerReviewTitle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aggresive"
        android:gravity="center_horizontal"
        android:text="@string/customer_feedback"
        android:textColor="#000000"
        android:textSize="48sp" />


    <EditText
        android:id="@+id/customerReviewName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/textview_style"
        android:paddingStart="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/customerReviewPhone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:paddingStart="24dp"
        android:autofillHints=""
        android:background="@drawable/textview_style"
        android:ems="10"
        android:hint="@string/customerPhone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/customerReviewEmailAddress"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:paddingStart="24dp"
        android:background="@drawable/textview_style"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/customerReviewTextboxv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/textview_style"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/customerReviewFeedbackBox"
        android:inputType="textMultiLine"
        android:lines="6"
        android:paddingStart="34dp"
        android:textColorHint="#757575" />

    <RatingBar
        android:id="@+id/rbStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:contentDescription="@string/fiveStarRatingBar"
        android:numStars="5"
        android:progressBackgroundTint="#BCBCBC" />

    <Button
        android:id="@+id/customerReviewButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/customerReviewFeedbackButton"
        android:minHeight="48dp"
        android:src="@drawable/ic_message"
        android:text="@string/submit"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

</LinearLayout>