<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageButton
        android:id="@+id/navigate_up"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_angle_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:fontFamily="@font/origintech"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigate_up" />

    <TextView
        android:id="@+id/hi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/log_description"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_cover"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/hi_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textWebEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_cover"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/email_cover"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/forgot_pass_login"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_cover" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/welcome_background_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:background="@drawable/logicon_screen_style"
        android:gravity="center"
        android:id="@+id/social_icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_google"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_google" />

        <ImageView
            android:id="@+id/btn_twitter"
            android:layout_width="43dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_twitter" />

        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_facebook" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/log_icons"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/social_icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>